--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "react-food",
 	"version": "0.1.0",
-	"homepage": "https://twiar.github.io/react-food",
+	"homepage": "https://twiar.github.io/react-food/",
 	"private": true,
 	"dependencies": {
 		"@reduxjs/toolkit": "^1.8.3",
